--- a/projects/geo2sigmap/index.html
+++ b/projects/geo2sigmap/index.html
@@ -95,7 +95,7 @@
                 </span>
                 <!-- Dataset Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                  <a href="https://github.com/functions-lab/geo2sigmap/releases/tag/v1.0.0"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
@@ -127,7 +127,7 @@
         <img src="./static/videos/DavisonHall.webp" alt="WebP animation" style="max-width:40%">
         <img src="./static/videos/placeholder.png" alt="ML output result" style="max-width:40%"> -->
         <h2 class="subtitle has-text-centered">
-          <span class="dnerf">Geo2SigMap</span> truns geographical information into physically accruate digital twins, which can be used to
+          <span class="dnerf">Geo2SigMap</span> turns geographical information into physically accurate digital twins, which can be used to
           train and generating ML models for signal coverage prediction.
         </h2>
 
@@ -195,7 +195,7 @@
             </div>
             <p>
               Geo2SigMap implements a scalable, pure Python-based 3D scene generation workflow (scene_gen) using <a herf="https://www.open3d.org/docs/release/getting_started.html">Open3D</a> and the <a href="https://www.openstreetmap.org/">OpenStreetMap (OSM)</a> database.
-              Through command line tools or Python APIs, one can easily scale up 3D scene generation for hundreds of thousands of arbitraray selected areas.
+              Through command line tools or Python APIs, one can easily scale up 3D scene generation for hundreds of thousands of arbitrary selected areas.
             </p>
           </div>
           
@@ -289,7 +289,7 @@
               Our developed framework can be easily adapted to different areas. Shown above is an example of the developed wireless digital twin
               for the NSF <a href="https://cosmos-lab.org/">PAWR COSMOS testbed</a> area in the FCC Innovation Zone in West Harlem, NYC, where
               the coverage analysis is performed using Sionna RT in both FR1 (at 2.4 GHz) and FR2 (at 28 GHz) across the ~1 sq. mile area.
-              For more examples, please refer to our <a href="https://github.com/functions-lab/geo2sigmap/tree/main/examples">tutorial Jyputer notebooks</a>.
+              For more examples, please refer to our <a href="https://github.com/functions-lab/geo2sigmap/tree/main/examples">tutorial Jupyter notebooks</a>.
             </p>
           </div>
           
