--- a/projects/geo2sigmap/index.html
+++ b/projects/geo2sigmap/index.html
@@ -127,8 +127,8 @@
         <img src="./static/videos/DavisonHall.webp" alt="WebP animation" style="max-width:40%">
         <img src="./static/videos/placeholder.png" alt="ML output result" style="max-width:40%"> -->
         <h2 class="subtitle has-text-centered">
-          <span class="dnerf">Geo2SigMap</span> turns geographical information into physically accurate digital twins, which can be used to
-          train and generating ML models for signal coverage prediction.
+          <span class="dnerf">Geo2SigMap</span> turns geographical information into physically accurate digital twins, which can then
+          be used to generate synthetic ray tracing datasets and train ML models for signal coverage prediction.
         </h2>
 
       </div>
@@ -194,7 +194,7 @@
               <p class="is-bold"></p>
             </div>
             <p>
-              Geo2SigMap implements a scalable, pure Python-based 3D scene generation workflow (scene_gen) using <a herf="https://www.open3d.org/docs/release/getting_started.html">Open3D</a> and the <a href="https://www.openstreetmap.org/">OpenStreetMap (OSM)</a> database.
+              Geo2SigMap implements a scalable, pure Python-based 3D scene generation workflow (scene_gen) using <a href="https://www.open3d.org/docs/release/getting_started.html">Open3D</a> and the <a href="https://www.openstreetmap.org/">OpenStreetMap (OSM)</a> database.
               Through command line tools or Python APIs, one can easily scale up 3D scene generation for hundreds of thousands of arbitrary selected areas.
             </p>
           </div>
@@ -222,7 +222,7 @@
             <p>
               Geo2SigMap achieves efficient and precise RF signal mapping via a cascaded U-Net architecture, which is
               composed of U-Net-Iso and U-Net-Dir for generating coarse path gain (PG) maps and fine-grained signal
-              strengh (SS) maps, respectively. Specifically, the first U-Net generates a PG map that embeds the environmental information,
+              strength (SS) maps, respectively. Specifically, the first U-Net generates a PG map that embeds the environmental information,
               and the second U-Net further refines this process and generates the fine-grained SS map by incorporating directivity and
               link budget information, as well as an additional input of a sparsely sampled SS map sampled across the same area.
             </p>
@@ -307,7 +307,7 @@
 
           <div class="content has-text-justified">
             <p>
-              The work was carried out in the <a herf="https://functions-lab.github.io/">FuNCtions Lab</a> at Duke
+              The work was carried out in the <a href="https://functions-lab.github.io/">FuNCtions Lab</a> at Duke
               University and supported in part by NSF grants CNS2112562, CNS-2128638, CNS-2211944, and AST-2232458, and an NVIDIA Academic Grant.
               We thank Joe Scarangella (RF Connect), and John Board, William Brockelsby, and Robert Johnson (Duke
               University) for their contributions to this work.
@@ -328,10 +328,8 @@
       @inproceedings{li2024geo2sigmap,
         title={Geo2SigMap: High-fidelity RF signal mapping using geographic databases},
         author={Li, Yiming and Li, Zeyu and Gao, Zhihui and Chen, Tingjun},
-        booktitle={2024 IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN)},
-        pages={277--285},
-        year={2024},
-        organization={IEEE}
+        booktitle={Proc. IEEE International Symposium on Dynamic Spectrum Access Networks (DySPAN'24)},
+        year={2024}
       }
   </code></pre>
     </div>
